[package]
name = "signalk"
version = "0.6.0-alpha+3"
edition = "2021"
license-file = "LICENSE"
description = "A library to parse signalk maritime data"
homepage = "https://balp.github.io/signalk/"
documentation = "https://balp.github.io/signalk/_static/rust_api/signalk/index.html"
repository = "https://github.com/balp/signalk/"
readme = "README.md"

keywords = ["signalk", "opendata", "marine"]
categories = ["data-structures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = [
    ".idea/*",
    ".github/*",
    "docs/*",
]
[dependencies]
time = { version = "0.3.36", features = ["formatting", "parsing", "serde"] }
derive_more = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
tungstenite = { version = "0.24.0" }
